[bumpversion]
files = provision/generators/README.yaml
commit = False
tag = False
current_version = 0.0.0

[bumpversion:file:setup.cfg]
search = {current_version}
replace = {new_version}

[bumpversion:file:provision/generators/README.yaml]
search = {current_version}
replace = {new_version}

[metadata]
description-file = README.md
